--- a/docs/scrna.ipynb
+++ b/docs/scrna.ipynb
@@ -19,7 +19,10 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "This illustrates how to manage scRNA-seq datasets.\n",
+    "Single-cell RNA-seq (scRNA-seq) measures gene expression of individual cells and generates datasets that are often used to define cell states that associated with functional phenotypes. Data formats, such as [AnnData](https://anndata.readthedocs.io/en/latest/) and [SingleCellExperiment](https://bioconductor.org/packages/release/bioc/html/SingleCellExperiment.html) objects help storing metadata and data as an entity. However, non-validated metadata are often stored which made it hard to integrate with other datasets.\n",
+    "\n",
+    "In this notebook, we show how Lamin can help with manage scRNA-seq data.\n",
+    "\n",
     "```{toctree}\n",
     ":maxdepth: 1\n",
     ":hidden:\n",
