--- a/docs/scrna.ipynb
+++ b/docs/scrna.ipynb
@@ -716,6 +716,7 @@
     "    record.save()\n",
     "    record.add_synonym(ct)\n",
     "\n",
+    "# standardize cell type names in the dataset\n",
     "pbcm68k_validated.obs[\"cell_type\"] = pbcm68k_validated.obs[\"cell_type\"].map(mapper)"
    ]
   },
@@ -767,6 +768,17 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "var_feature_set = file.features.get_feature_set(\"var\")\n",
+    "var_feature_set.modality = modalities.rna\n",
+    "var_feature_set.save()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
    "metadata": {
     "tags": []
    },
@@ -783,18 +795,7 @@
    "outputs": [],
    "source": [
     "file.add_labels(lb.settings.species, feature=\"species\")\n",
-    "file.add_labels(lb.ExperimentalFactor.filter(name=scrna_name).one(), feature=\"assay\")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "var_feature_set = file.features.get_feature_set(\"var\")\n",
-    "var_feature_set.modality = modality\n",
-    "var_feature_set.save()"
+    "file.add_labels(scrna, feature=\"assay\")"
    ]
   },
   {
