--- a/docs/scrna2.ipynb
+++ b/docs/scrna2.ipynb
@@ -15,6 +15,22 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "scRNA-seq data integration is the process of combining and analyzing data from several scRNA sequencing experiments to uncover common or distinct biological insights and patterns.\n",
+    "\n",
+    "Here, we'll demonstrate how to fetch two scRNA-seq datasets by registered metadata such as cell types to finally integrate them."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Setup"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
@@ -61,7 +77,6 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# lookup objects for auto-complete\n",
     "assays = lb.ExperimentalFactor.lookup()\n",
     "species = lb.Species.lookup()"
    ]
@@ -306,7 +321,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "py39",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
@@ -320,7 +335,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.16"
+   "version": "3.10.12"
   },
   "nbproject": {
    "id": "agayZTonayqA",
@@ -334,5 +349,5 @@
   }
  },
  "nbformat": 4,
- "nbformat_minor": 2
+ "nbformat_minor": 4
 }
