📝 Further improve scrna

--- a/docs/scrna.ipynb
+++ b/docs/scrna.ipynb
@@ -19,9 +19,11 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Single-cell RNA-seq (scRNA-seq) measures gene expression of individual cells and generates datasets that are often used to define cell states that associated with functional phenotypes. Data formats, such as [AnnData](https://anndata.readthedocs.io/en/latest/) and [SingleCellExperiment](https://bioconductor.org/packages/release/bioc/html/SingleCellExperiment.html) objects help storing metadata and data as an entity. However, non-validated metadata are often stored which made it hard to integrate with other datasets.\n",
+    "Single-cell RNA-seq (scRNA-seq) measures gene expression of individual cells and generates datasets often used to define cell states associated with functional phenotypes.\n",
     "\n",
-    "In this notebook, we show how Lamin can help with manage scRNA-seq data.\n",
+    "Data objects, such as [AnnData](https://anndata.readthedocs.io/en/latest/) and [SingleCellExperiment](https://bioconductor.org/packages/release/bioc/html/SingleCellExperiment.html) help storing metadata and data as an entity. However, non-validated metadata are often stored, making it hard to integrate with other datasets.\n",
+    "\n",
+    "In this notebook, we show how Lamin can help with managing scRNA-seq data.\n",
     "\n",
     "```{toctree}\n",
     ":maxdepth: 1\n",
@@ -74,7 +76,9 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
-    "tags": []
+    "tags": [
+     "hide-output"
+    ]
    },
    "outputs": [],
    "source": [
@@ -148,7 +152,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "We’re seeing that 148 gene identifiers can’t be validated (not currently in the Gene registry). We’d like to validate all features in this dataset, hence, let’s inspect them to see what to do:"
+    "148 gene identifiers can’t be validated (not currently in the `Gene` registry). Lt’s inspect them to see what to do:"
    ]
   },
   {
@@ -161,14 +165,14 @@
    },
    "outputs": [],
    "source": [
-    "inspect_result = lb.Gene.inspect(adata.var.index, lb.Gene.ensembl_gene_id)"
+    "inspector = lb.Gene.inspect(adata.var.index, lb.Gene.ensembl_gene_id)"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Inspect logging says 35 of the non-validated ensembl_gene_ids can be found in Bionty reference. Let's register them:"
+    "Logging says 35 of the non-validated `ensembl_gene_id`s can be found in Bionty reference. Let's register them:"
    ]
   },
   {
@@ -181,10 +185,10 @@
    },
    "outputs": [],
    "source": [
-    "records_bionty = lb.Gene.from_values(\n",
-    "    inspect_result.non_validated, lb.Gene.ensembl_gene_id\n",
+    "records_from_bionty = lb.Gene.from_values(\n",
+    "    inspector.non_validated, lb.Gene.ensembl_gene_id\n",
     ")\n",
-    "ln.save(records_bionty)"
+    "ln.save(records_from_bionty)"
    ]
   },
   {
@@ -193,7 +197,7 @@
    "source": [
     "The rest 113 aren't present in the current Ensembl assembly (e.g. [ENSG00000112096](https://www.ensembl.org/Homo_sapiens/Gene/Idhistory?g=ENSG00000112096)). \n",
     "\n",
-    "We'd still like to register them, so let's create Gene records with those ensembl_gene_ids:"
+    "We'd still like to register them, so let's create Gene records with those `ensembl_gene_id`s:"
    ]
   },
   {
@@ -206,7 +210,7 @@
    },
    "outputs": [],
    "source": [
-    "validated = lb.Gene.validate(adata.var.index, lb.Gene.ensembl_gene_id, mute=True)\n",
+    "validated = lb.Gene.validate(adata.var.index, lb.Gene.ensembl_gene_id)\n",
     "nonval_ensembl_ids = adata.var.index[~validated]\n",
     "new_records = [\n",
     "    lb.Gene(ensembl_gene_id=ens_id, species=lb.settings.species)\n",
@@ -276,16 +280,10 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "features = ln.Feature.from_df(adata.obs)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "ln.save(features)"
+    "# use `Feature.from_df` to auto-configure type\n",
+    "# alternatively: `ln.Feature(name=\"donor\", type=\"category\")`\n",
+    "feature = ln.Feature.from_df(adata.obs.loc[:, ~validated])[0]\n",
+    "ln.save(feature)"
    ]
   },
   {
