--- a/docs/scrna.ipynb
+++ b/docs/scrna.ipynb
@@ -19,11 +19,13 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Single-cell RNA-seq (scRNA-seq) measures gene expression of individual cells and generates datasets often used to define cell states associated with functional phenotypes.\n",
+    "scRNA-seq measures gene expression of individual cells. It generates datasets used to define cell states associated with phenotypes.\n",
     "\n",
-    "Data objects, such as [AnnData](https://anndata.readthedocs.io/en/latest/) and [SingleCellExperiment](https://bioconductor.org/packages/release/bioc/html/SingleCellExperiment.html) help storing metadata and data as an entity. However, non-validated metadata are often stored, making it hard to integrate with other datasets.\n",
+    "Their analysis is typically based on data objects like [AnnData](https://anndata.readthedocs.io/en/latest/), [SingleCellExperiment](https://bioconductor.org/packages/release/bioc/html/SingleCellExperiment.html) & [Seurat objects](https://github.com/satijalab/seurat).\n",
     "\n",
-    "In this notebook, we show how Lamin can help with managing scRNA-seq data.\n",
+    "These objects, however, often contain non-validated metadata, making data integration hard.\n",
+    "\n",
+    "In this notebook, LaminDB is used to make turn `AnnData` objects into validated & queryable assets.\n",
     "\n",
     "```{toctree}\n",
     ":maxdepth: 1\n",
@@ -91,14 +93,14 @@
    "source": [
     "### Transform ![](https://img.shields.io/badge/Transform-10b981)\n",
     "\n",
-    "(Here we skip steps of data transformations, which often includes filtering, normalizing, or formatting data.)"
+    "(Here we skip typical transformation steps that involve filtering, normalizing, and formatting.)"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Let’s look at a scRNA-seq count matrix in form of an AnnData object:"
+    "Let’s look at an scRNA-seq count matrix in form of an AnnData object:"
    ]
   },
   {
@@ -112,7 +114,7 @@
    "outputs": [],
    "source": [
     "adata = ln.dev.datasets.anndata_human_immune_cells(\n",
-    "    populate_registries=True  # pre-populate registries to simulate an used instance\n",
+    "    populate_registries=True  # this pre-populates registries\n",
     ")"
    ]
   },
@@ -172,7 +174,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Logging says 35 of the non-validated `ensembl_gene_id`s can be found in Bionty reference. Let's register them:"
+    "Logging says 35 of the non-validated ids can be found in the Bionty reference. Let's register them:"
    ]
   },
   {
@@ -185,19 +187,17 @@
    },
    "outputs": [],
    "source": [
-    "records_from_bionty = lb.Gene.from_values(\n",
-    "    inspector.non_validated, lb.Gene.ensembl_gene_id\n",
-    ")\n",
-    "ln.save(records_from_bionty)"
+    "records = lb.Gene.from_values(inspector.non_validated, lb.Gene.ensembl_gene_id)\n",
+    "ln.save(records)"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "The rest 113 aren't present in the current Ensembl assembly (e.g. [ENSG00000112096](https://www.ensembl.org/Homo_sapiens/Gene/Idhistory?g=ENSG00000112096)). \n",
+    "The remaining 113 are legacy IDs, not present in the current Ensembl assembly (e.g. [ENSG00000112096](https://www.ensembl.org/Homo_sapiens/Gene/Idhistory?g=ENSG00000112096)).\n",
     "\n",
-    "We'd still like to register them, so let's create Gene records with those `ensembl_gene_id`s:"
+    "We'd still like to register them:"
    ]
   },
   {
@@ -211,12 +211,8 @@
    "outputs": [],
    "source": [
     "validated = lb.Gene.validate(adata.var.index, lb.Gene.ensembl_gene_id)\n",
-    "nonval_ensembl_ids = adata.var.index[~validated]\n",
-    "new_records = [\n",
-    "    lb.Gene(ensembl_gene_id=ens_id, species=lb.settings.species)\n",
-    "    for ens_id in nonval_ensembl_ids\n",
-    "]\n",
-    "ln.save(new_records)"
+    "records = [lb.Gene(ensembl_gene_id=id) for id in adata.var.index[~validated]]\n",
+    "ln.save(records)"
    ]
   },
   {
@@ -252,13 +248,6 @@
    ]
   },
   {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "1 feature is not validated: donor"
-   ]
-  },
-  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
@@ -271,7 +260,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Let's register it:"
+    "1 feature is not validated: `\"donor\"`. Let's register it:"
    ]
   },
   {
@@ -280,8 +269,6 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# use `Feature.from_df` to auto-configure type\n",
-    "# alternatively: `ln.Feature(name=\"donor\", type=\"category\")`\n",
     "feature = ln.Feature.from_df(adata.obs.loc[:, ~validated])[0]\n",
     "ln.save(feature)"
    ]
@@ -306,9 +293,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Next, let's validate the corresponding labels of each feature:\n",
+    "Next, let's validate the corresponding labels of each feature.\n",
     "\n",
-    "Some of the metadata labels can be typed using dedicated registries: (e.g. bionty offers ontology-based registries for biological entities)"
+    "Some of the metadata labels can be typed using dedicated registries like {class}`~docs:lnschema_bionty.CellType`:"
    ]
   },
   {
@@ -324,7 +311,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Register non-validated cell types from Bionty:"
+    "Register non-validated cell types - they can all be loaded from a public ontology through Bionty:"
    ]
   },
   {
@@ -357,7 +344,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Metadata that can’t be typed with dedicated registries (in this example, we didn't mount a [custom schema](https://lamin.ai/docs/schemas) that contains a Donor registry), we can use the {class}`~lamindb.Label` registry to track donor ids."
+    "Because we didn't mount a [custom schema](https://lamin.ai/docs/schemas) that contains a `Donor` registry, we use the {class}`~lamindb.Label` registry to track donor ids:"
    ]
   },
   {
@@ -401,7 +388,7 @@
    "source": [
     "#### Validate external metadata\n",
     "\n",
-    "In addition to what’s already in the file, we’d like to link this file with external features including \"species\" and \"assay\":"
+    "In addition to what’s already in the file, we’d like to link this file to external features including \"species\" and \"assay\":"
    ]
   },
   {
@@ -418,14 +405,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Validate corresponding labels of these features:"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "Sometimes we don't remember what the term is called exactly, search can help:"
+    "Let's search for the scRNA-seq assay label:"
    ]
   },
   {
@@ -464,7 +444,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "When we create a File object from an AnnData, we’ll automatically link its feature sets and get information about unmapped categories:"
+    "When we create a `File` object from an `AnnData`, we’ll automatically link its feature sets and get information about unmapped categories:"
    ]
   },
   {
