--- a/docs/scrna.ipynb
+++ b/docs/scrna.ipynb
@@ -25,7 +25,7 @@
     "\n",
     "These objects, however, often contain non-validated metadata, making data integration hard.\n",
     "\n",
-    "In this notebook, LaminDB is used to make turn `AnnData` objects into validated & queryable assets.\n",
+    "In this notebook, LaminDB is used to turn `AnnData` objects into validated & queryable assets.\n",
     "\n",
     "```{toctree}\n",
     ":maxdepth: 1\n",
@@ -100,7 +100,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Let’s look at an scRNA-seq count matrix in form of an AnnData object:"
+    "Let’s look at a scRNA-seq count matrix in form of an AnnData object:"
    ]
   },
   {
@@ -827,7 +827,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.12"
+   "version": "3.9.16"
   },
   "nbproject": {
    "id": "Nv48yAceNSh8",
