--- a/docs/scrna2.ipynb
+++ b/docs/scrna2.ipynb
@@ -18,7 +18,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "scRNA-seq data integration is the process of combining and analyzing data from several scRNA sequencing experiments to uncover common or distinct biological insights and patterns.\n",
+    "scRNA-seq data integration is the process of analyzing data from several scRNA sequencing experiments to uncover common or distinct biological insights and patterns.\n",
     "\n",
     "Here, we'll demonstrate how to fetch two scRNA-seq datasets by registered metadata such as cell types to finally integrate them."
    ]
@@ -335,7 +335,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.12"
+   "version": "3.9.16"
   },
   "nbproject": {
    "id": "agayZTonayqA",
