--- a/docs/scrna2.ipynb
+++ b/docs/scrna2.ipynb
@@ -135,7 +135,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "file1.view_lineage()"
+    "file1.view_flow()"
    ]
   },
   {
@@ -153,7 +153,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "file2.view_lineage()"
+    "file2.view_flow()"
    ]
   },
   {
