--- a/docs/scrna.ipynb
+++ b/docs/scrna.ipynb
@@ -19,11 +19,11 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "scRNA-seq measures gene expression of individual cells. It generates datasets used to define cell states associated with phenotypes.\n",
+    "scRNA-seq measures gene expression of individual cells.\n",
     "\n",
     "Their analysis is typically based on data objects like [AnnData](https://anndata.readthedocs.io/en/latest/), [SingleCellExperiment](https://bioconductor.org/packages/release/bioc/html/SingleCellExperiment.html) & [Seurat objects](https://github.com/satijalab/seurat).\n",
     "\n",
-    "These objects, however, often contain non-validated metadata, making data integration hard.\n",
+    "These objects often contain non-validated metadata, making data integration & interpretation hard.\n",
     "\n",
     "In this notebook, LaminDB is used to turn `AnnData` objects into validated & queryable assets.\n",
     "\n",
@@ -91,16 +91,14 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Transform ![](https://img.shields.io/badge/Transform-10b981)\n",
-    "\n",
-    "(Here we skip typical transformation steps that involve filtering, normalizing, and formatting.)"
+    "### Access ![](https://img.shields.io/badge/Access-10b981)"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Let’s look at a scRNA-seq count matrix in form of an AnnData object:"
+    "Let’s look at a scRNA-seq count matrix in form of an `AnnData` object that we'd like to ingest into LaminDB:"
    ]
   },
   {
@@ -125,6 +123,13 @@
    "outputs": [],
    "source": [
     "adata"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "This `AnnData` object does not require filtering, normalizing or formatting, hence, there is no ![](https://img.shields.io/badge/Transform-10b981) step."
    ]
   },
   {
@@ -402,28 +407,13 @@
    ]
   },
   {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "Let's search for the scRNA-seq assay label:"
-   ]
-  },
-  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
-    "lb.ExperimentalFactor.search(\"scRNA-seq\").head(2)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "scrna = lb.ExperimentalFactor.filter(id=\"068T1Df6\").one()"
+    "efs = lb.ExperimentalFactor.lookup()\n",
+    "species = lb.Species.lookup()"
    ]
   },
   {
@@ -533,9 +523,9 @@
     "tissues = lb.Tissue.from_values(adata.obs.tissue, field=\"name\")\n",
     "donors = ln.Label.from_values(adata.obs[\"donor\"])\n",
     "\n",
-    "file.add_labels(cell_types, \"cell_type\")\n",
-    "file.add_labels(efs, \"assay\")\n",
-    "file.add_labels(tissues, \"tissue\")\n",
+    "file.add_labels(cell_types, feature=\"cell_type\")\n",
+    "file.add_labels(efs, feature=\"assay\")\n",
+    "file.add_labels(tissues, feature=\"tissue\")\n",
     "file.add_labels(donors, feature=\"donor\")"
    ]
   },
@@ -552,8 +542,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "file.add_labels(lb.settings.species, feature=\"species\")\n",
-    "file.add_labels(scrna, feature=\"assay\")"
+    "file.add_labels(species.human, feature=\"species\")\n",
+    "file.add_labels(efs.single_cell_rna_sequencing, feature=\"assay\")"
    ]
   },
   {
@@ -593,7 +583,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Transform ![](https://img.shields.io/badge/Transform-10b981)"
+    "### Access ![](https://img.shields.io/badge/Access-10b981)"
    ]
   },
   {
