--- a/docs/scrna.ipynb
+++ b/docs/scrna.ipynb
@@ -329,10 +329,8 @@
    },
    "outputs": [],
    "source": [
-    "nonval_cell_type_records = lb.CellType.from_values(\n",
-    "    adata.obs.cell_type[~validated], \"name\"\n",
-    ")\n",
-    "ln.save(nonval_cell_type_records)"
+    "records = lb.CellType.from_values(adata.obs.cell_type[~validated], \"name\")\n",
+    "ln.save(records)"
    ]
   },
   {
@@ -358,7 +356,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "ln.Label.validate(adata.obs[\"donor\"]);"
+    "ln.Label.validate(adata.obs.donor);"
    ]
   },
   {
@@ -374,7 +372,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "donors = [ln.Label(name=name) for name in adata.obs[\"donor\"].unique()]\n",
+    "donors = [ln.Label(name=name) for name in adata.obs.donor.unique()]\n",
     "ln.save(donors)"
    ]
   },
@@ -384,16 +382,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "ln.Label.validate(adata.obs[\"donor\"]);"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "#### Validate external metadata\n",
-    "\n",
-    "In addition to what’s already in the file, we’d like to link this file to external features including \"species\" and \"assay\":"
+    "ln.Label.validate(adata.obs.donor);"
    ]
   },
   {
@@ -402,17 +391,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "ln.Feature.validate(\"species\")\n",
-    "ln.Feature.validate(\"assay\");"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "efs = lb.ExperimentalFactor.lookup()\n",
+    "experimental_factors = lb.ExperimentalFactor.lookup()\n",
     "species = lb.Species.lookup()"
    ]
   },
@@ -507,7 +486,24 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Let's now link observational metadata by adding labels to corresponding features."
+    "Let us first link labels for the entire file:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "file.add_labels(species.human, feature=\"species\")\n",
+    "file.add_labels(experimental_factors.single_cell_rna_sequencing, feature=\"assay\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Let us know parse the columns of `adata.obs` for additional metadata:"
    ]
   },
   {
@@ -527,23 +523,6 @@
     "file.add_labels(efs, feature=\"assay\")\n",
     "file.add_labels(tissues, feature=\"tissue\")\n",
     "file.add_labels(donors, feature=\"donor\")"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "Note that adding labels to an external feature will create an external feature set."
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "file.add_labels(species.human, feature=\"species\")\n",
-    "file.add_labels(efs.single_cell_rna_sequencing, feature=\"assay\")"
    ]
   },
   {
