--- a/docs/scrna.ipynb
+++ b/docs/scrna.ipynb
@@ -741,8 +741,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "file.add_labels(lb.settings.species, feature=\"species\")\n",
-    "file.add_labels(scrna, feature=\"assay\")"
+    "file.add_labels(species.human, feature=\"species\")\n",
+    "file.add_labels(experimental_factors.single_cell_rna_sequencing, feature=\"assay\")"
    ]
   },
   {
