--- a/docs/scrna2.ipynb
+++ b/docs/scrna2.ipynb
@@ -93,7 +93,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "ln.Transform.filter(created_by=users.falexwolf).search(\"register scrna\")"
+    "ln.Transform.filter(created_by=users.testuser1).search(\"register scrna\")"
    ]
   },
   {
