📝 Polish flow & scrna (#59)

--- a/docs/scrna.ipynb
+++ b/docs/scrna.ipynb
@@ -19,11 +19,11 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "scRNA-seq measures gene expression of individual cells. It generates datasets used to define cell states associated with phenotypes.\n",
+    "scRNA-seq measures gene expression of individual cells.\n",
     "\n",
     "Their analysis is typically based on data objects like [AnnData](https://anndata.readthedocs.io/en/latest/), [SingleCellExperiment](https://bioconductor.org/packages/release/bioc/html/SingleCellExperiment.html) & [Seurat objects](https://github.com/satijalab/seurat).\n",
     "\n",
-    "These objects, however, often contain non-validated metadata, making data integration hard.\n",
+    "These objects often contain non-validated metadata, making data integration & interpretation hard.\n",
     "\n",
     "In this notebook, LaminDB is used to turn `AnnData` objects into validated & queryable assets.\n",
     "\n",
@@ -91,16 +91,14 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Transform ![](https://img.shields.io/badge/Transform-10b981)\n",
-    "\n",
-    "(Here we skip typical transformation steps that involve filtering, normalizing, and formatting.)"
+    "### Access ![](https://img.shields.io/badge/Access-10b981)"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Let’s look at a scRNA-seq count matrix in form of an AnnData object:"
+    "Let’s look at a scRNA-seq count matrix in form of an `AnnData` object that we'd like to ingest into LaminDB:"
    ]
   },
   {
@@ -125,6 +123,13 @@
    "outputs": [],
    "source": [
     "adata"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "This `AnnData` object does not require filtering, normalizing or formatting, hence, there is no ![](https://img.shields.io/badge/Transform-10b981) step."
    ]
   },
   {
@@ -324,10 +329,8 @@
    },
    "outputs": [],
    "source": [
-    "nonval_cell_type_records = lb.CellType.from_values(\n",
-    "    adata.obs.cell_type[~validated], \"name\"\n",
-    ")\n",
-    "ln.save(nonval_cell_type_records)"
+    "records = lb.CellType.from_values(adata.obs.cell_type[~validated], \"name\")\n",
+    "ln.save(records)"
    ]
   },
   {
@@ -353,7 +356,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "ln.Label.validate(adata.obs[\"donor\"]);"
+    "ln.Label.validate(adata.obs.donor);"
    ]
   },
   {
@@ -369,7 +372,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "donors = [ln.Label(name=name) for name in adata.obs[\"donor\"].unique()]\n",
+    "donors = [ln.Label(name=name) for name in adata.obs.donor.unique()]\n",
     "ln.save(donors)"
    ]
   },
@@ -379,16 +382,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "ln.Label.validate(adata.obs[\"donor\"]);"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "#### Validate external metadata\n",
-    "\n",
-    "In addition to what’s already in the file, we’d like to link this file to external features including \"species\" and \"assay\":"
+    "ln.Label.validate(adata.obs.donor);"
    ]
   },
   {
@@ -397,33 +391,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "ln.Feature.validate(\"species\")\n",
-    "ln.Feature.validate(\"assay\");"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "Let's search for the scRNA-seq assay label:"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "lb.ExperimentalFactor.search(\"scRNA-seq\").head(2)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "scrna = lb.ExperimentalFactor.filter(id=\"068T1Df6\").one()"
+    "experimental_factors = lb.ExperimentalFactor.lookup()\n",
+    "species = lb.Species.lookup()"
    ]
   },
   {
@@ -517,7 +486,24 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Let's now link observational metadata by adding labels to corresponding features."
+    "Let us first link labels for the entire file:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "file.add_labels(species.human, feature=\"species\")\n",
+    "file.add_labels(experimental_factors.single_cell_rna_sequencing, feature=\"assay\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Let us know parse the columns of `adata.obs` for additional metadata:"
    ]
   },
   {
@@ -533,27 +519,10 @@
     "tissues = lb.Tissue.from_values(adata.obs.tissue, field=\"name\")\n",
     "donors = ln.Label.from_values(adata.obs[\"donor\"])\n",
     "\n",
-    "file.add_labels(cell_types, \"cell_type\")\n",
-    "file.add_labels(efs, \"assay\")\n",
-    "file.add_labels(tissues, \"tissue\")\n",
+    "file.add_labels(cell_types, feature=\"cell_type\")\n",
+    "file.add_labels(efs, feature=\"assay\")\n",
+    "file.add_labels(tissues, feature=\"tissue\")\n",
     "file.add_labels(donors, feature=\"donor\")"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "Note that adding labels to an external feature will create an external feature set."
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "file.add_labels(lb.settings.species, feature=\"species\")\n",
-    "file.add_labels(scrna, feature=\"assay\")"
    ]
   },
   {
@@ -593,7 +562,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Transform ![](https://img.shields.io/badge/Transform-10b981)"
+    "### Access ![](https://img.shields.io/badge/Access-10b981)"
    ]
   },
   {
@@ -772,8 +741,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "file.add_labels(lb.settings.species, feature=\"species\")\n",
-    "file.add_labels(scrna, feature=\"assay\")"
+    "file.add_labels(species.human, feature=\"species\")\n",
+    "file.add_labels(experimental_factors.single_cell_rna_sequencing, feature=\"assay\")"
    ]
   },
   {
