--- a/docs/scrna2.ipynb
+++ b/docs/scrna2.ipynb
@@ -68,7 +68,57 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Query files based on metadata"
+    "## Access ![](https://img.shields.io/badge/Access-10b981) "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Query files by provenance metadata"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "users = ln.User.lookup()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "ln.Transform.filter(created_by=users.testuser1).search(\"register scrna\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "transform = ln.Transform.filter(id=\"Nv48yAceNSh8z8\").one()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "ln.File.filter(transform=transform).df()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Query files based on biological metadata "
    ]
   },
   {
@@ -78,7 +128,8 @@
    "outputs": [],
    "source": [
     "assays = lb.ExperimentalFactor.lookup()\n",
-    "species = lb.Species.lookup()"
+    "species = lb.Species.lookup()\n",
+    "cell_types = lb.CellType.lookup()"
    ]
   },
   {
@@ -88,10 +139,10 @@
    "outputs": [],
    "source": [
     "query = ln.File.filter(\n",
-    "    experimental_factors=assays.single_cell_rna_sequencing,  # scRNA-seq\n",
-    "    species=species.human,  # human\n",
-    "    cell_types__name__contains=\"monocyte\",  # monocyte\n",
-    ").distinct()"
+    "    experimental_factors=assays.single_cell_rna_sequencing,\n",
+    "    species=species.human,\n",
+    "    cell_types=cell_types.conventional_dendritic_cell,\n",
+    ")"
    ]
   },
   {
@@ -107,7 +158,21 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Intersect measured genes between two datasets"
+    "## Transform ![](https://img.shields.io/badge/Transform-10b981) "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Compare gene sets"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Get file objects:"
    ]
   },
   {
@@ -116,7 +181,6 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# get file objects\n",
     "file1, file2 = query.list()"
    ]
   },
@@ -234,7 +298,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Intersect cell types"
+    "### Compare cell types"
    ]
   },
   {
@@ -277,7 +341,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Concatenate subseted datasets:"
+    "Concatenate subsetted datasets:"
    ]
   },
   {
